[tool.poetry]
name = "MinMaxLTTB"
version = "0.1"
description = "MinMaxLTTB: MinMax preselection of datapoints for more scalable time series visualization using the LTTB algorithm"
authors = ["Jeroen Van Der Donckt", "Jonas Van Der Donckt"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/predict-idlab/MinMaxLTTB"
documentation = "https://github.com/predict-idlab/MinMaxLTTB"
keywords = ["time-series", "visualization", "preselection", "data aggregation", "MinMax", "LTTB", "performance"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22"
plotly-resampler = "0.8.1"
# matplotlib = "^3.6.1"
# scipy = "^1.9.2"
# Werkzeug = "2.2.1"
# seaborn = "^0.12.1"
tqdm = "^4.64.1"
# pyfunctional = "^1.4.3"
fastparquet = "^0.8.3"
pyarrow = "^10.0.0"
kaleido = "0.2.0"
# scikit-image = "^0.19.3"
# bokeh = "^3.0.3"
# selenium = "^4.8.0"


[tool.poetry.extras]
inline_persistent = ["Flask-Cors", "kaleido"]

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipywidgets = "^7.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.198"
isort = "^5.12.0"
pycairo = "^1.23.0"

